--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
         </nav>
     </div>
 
-    <script src="js/sheets.js"></script>
-    <script src="js/countdown.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/sheets.js?v=2"></script>
+    <script src="js/countdown.js?v=2"></script>
+    <script src="js/main.js?v=2"></script>
 </body>
 </html>
