--- a/index.html
+++ b/index.html
@@ -286,5 +286,6 @@
     <script src="js/sheets.js?v=2"></script>
     <script src="js/countdown.js?v=2"></script>
     <script src="js/main.js?v=2"></script>
+    <script type="module" src="js/dataLoader.js?v=2"></script>
 </body>
 </html>
