--- a/index.html
+++ b/index.html
@@ -247,12 +247,13 @@
             
             <div class="pt-6 border-t border-gray-700 flex flex-col md:flex-row justify-between items-center">
                 <p class="mb-4 md:mb-0">© <span id="currentYear"></span> AliDeals. כל הזכויות שמורות.</p>
-                <div class="flex space-x-6 space-x-reverse">
-                    <img src="assets/images/payment-methods/visa.png" alt="Visa" class="h-8">
-                    <img src="assets/images/payment-methods/mastercard.png" alt="Mastercard" class="h-8">
-                    <img src="assets/images/payment-methods/paypal.png" alt="PayPal" class="h-8">
-                    <img src="assets/images/payment-methods/bitcoin.png" alt="Bitcoin" class="h-8">
-                </div>
+                <!-- In your footer section -->
+                    <div class="flex space-x-6 space-x-reverse">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Visa_Inc._logo.svg" alt="Visa" class="h-8">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="Mastercard" class="h-8">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" alt="PayPal" class="h-8">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Bitcoin.svg" alt="Bitcoin" class="h-8">
+                    </div>
             </div>
         </div>
     </footer>
