--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AliExpress Deals - מציאות מדהימות מאליאקספרס</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    
 <!-- Then your custom CSS -->
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -64,9 +65,7 @@
     </header>
 
     <!-- Hero Slider -->
-    <div class="relative h-96 overflow-hidden" id="heroSlider">
-        <!-- Slides will be loaded from Google Sheets -->
-    </div>
+    <div id="heroSlider" class="relative h-96 overflow-hidden"></div>
 
     <!-- Categories -->
     <section class="py-10 bg-white">
